@@ -75,7 +75,7 @@ autoreconf -ifv
 %configure --disable-static --disable-tessdata-prefix CXXFLAGS="$RPM_OPT_FLAGS -DTESSDATA_PREFIX=/usr/share/%{tessdata}/4" LDFLAGS="-llept -Wl,-z,defs -Wl,-z,relro"
 
 make %{?_smp_mflags}
-%if 0%{?centos_version} == 700 || 0%{?scientificlinux_version} == 700
+%if 0%{?centos_version} == 700 || 0%{?scientificlinux_version} == 700 || 0%{?rhel_version} == 700
 echo "no training build"
 %else
 make training %{?_smp_mflags} 
@@ -87,7 +87,7 @@ echo "auto_test"
 
 %install
 %make_install
-%if 0%{?centos_version} == 700 || 0%{?scientificlinux_version} == 700
+%if 0%{?centos_version} == 700 || 0%{?scientificlinux_version} == 700 || 0%{?rhel_version} == 700
 echo "no training install"
 rm -f %{buildroot}%{_mandir}/man5/*
 rm -f %{buildroot}%{_mandir}/man1/ambiguous_words*
@@ -178,7 +178,7 @@ open-sourced by HP and UNLV in 2005.
 %files
 %license COPYING
 %doc AUTHORS ChangeLog 
-%if 0%{?centos_version} == 700 || 0%{?scientificlinux_version} == 700
+%if 0%{?centos_version} == 700 || 0%{?scientificlinux_version} == 700 || 0%{?rhel_version} == 700
 %{_mandir}/man1/tesseract.*
 %else
 %{_bindir}/ambiguous_words
